# typewriter

./: .gitignore  .gitmodules  .oxfmtrc.json  .remanso.json  CONTEXT.md  Cargo.toml  GLOSSARY.md  README.md
.github/workflows/: installer-release.yml
app/: Cargo.toml
app/src/: lib.rs  ports.rs  render.rs  runtime.rs
app/src/runtime/: tests.rs
conf/: Cargo.toml
conf/src/: lib.rs
display/examples/: font_preview.rs
display/src/: lib.rs
display/src/fonts/: cascadia_mono.rs  cascadia_mono_10x20.raw  dejavu_sans_mono.rs  dejavu_sans_mono_10x20.raw  fira_code.rs  fira_code_10x20.raw  jetbrains_mono.rs  jetbrains_mono_10x20.raw  mod.rs  mononoki.rs  mononoki_10x20.raw
display/tools/: fontgen.py
docs/: README.md  adr.md  hardware.md  house-vs-product.md  macroplan.md  qfd-budget.md  qfd-changelog.md  qfd-house-1.md  qfd-house-2.md  qfd-houses-3-4.md  qfd-perception.md  qfd-tradeoffs.md  qfd.md  quality-house-empty.md  quality-house.md  roadmap.md  typoena-snippets.md  typoena-toml.md  v0.1-mvp-product.md  v0.1-mvp-technical.md  v0.5-palette-and-multi-file.md  v0.6-markdown.md  v0.7-search-and-git.md  v0.7.5-focus-mode.md  v0.9-onboarding-wizard.md  v0.9-robustness.md
docs/kaizen/: cold-boot-time.md  real-repo-sync.md
docs/notes/: README.md  boot-time-budget.md  sync-latency.md
docs/postmortems/: 2026-07-05-spike3-sd-cmd59.md  2026-07-05-spike7-gix-https-push.md  2026-07-16-gate-scan-spike-refuted.md  2026-07-16-partial-refresh-bank-toggle.md  README.md
docs/tradeoff-curves/: README.md  epd-refresh-latency.md  sync-commit-staging.md  wifi-auto-sync.md
editor/src/: buffers.rs  editing.rs  fuzzy.rs  hud.rs  lib.rs  markdown.rs  motions.rs  palette.rs  prefs.rs  render.rs  search.rs  snippets.rs  tests.rs  undo.rs  visual.rs
editor/src/tests/: commands.rs  palette.rs  prefs.rs
firmware/: .env.example  Cargo.toml  README.md  build.rs  justfile  sdkconfig.defaults
firmware/components/libgit2/: CMakeLists.txt  esp_map.c  esp_mbedtls_stream.c  esp_port.h  esp_stubs.c  git2_features.h  poll.h
firmware/pkgconfig/: libgit2.pc  zlib.pc
firmware/src/: editor.rs  epd.rs  git_sync.rs  lib.rs  main.rs  persistence.rs  usb_kbd.rs  wizard_io.rs
firmware/src/drivers/: clock_esp.rs  keyboard_usb.rs  mod.rs  screen_epd.rs  system_esp.rs  wifi_esp.rs
firmware/src/infrastructure/: file_index.rs  mod.rs  storage_sd.rs  sync_git.rs  sync_null.rs  wizard_io.rs
hal/: Cargo.toml
hal/src/: lib.rs
hardware/: justfile
hardware/case/: .gitignore  README.md  concept.html  typoena-case.scad
installer/: Cargo.toml  DESIGN.md  justfile  rust-toolchain.toml
installer/src/: app.rs  auth.rs  config.rs  main.rs  preflight.rs  sdcard.rs  ui.rs  wipe.rs
keymap/src/: lib.rs
wizard/: Cargo.toml
wizard/src/: github.rs  lib.rs  tests.rs
